--- a/package.json
+++ b/package.json
@@ -3,19 +3,22 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "postcss src/index.css -o dist/style.css"
+    "build": "webpack --config webpack.config.js",
+    "dev": "webpack serve --mode development --env development"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "autoprefixer": "^10.0.2",
-    "postcss-cli": "^8.3.0",
-    "tailwindcss": "^2.0.1"
+    "tailwindcss": "^2.0.1",
+    "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
+    "css-loader": "^5.0.1",
     "postcss": "^8.1.7",
     "postcss-loader": "^4.0.4",
+    "style-loader": "^2.0.0",
     "webpack": "^5.5.1",
     "webpack-cli": "^4.2.0"
   }
