--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   "dependencies": {
     "autoprefixer": "^10.0.2",
     "tailwindcss": "^2.0.1",
+    "vue": "^2.6.12",
     "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
     "css-loader": "^5.0.1",
+    "html-webpack-plugin": "^5.0.0-alpha.14",
     "postcss": "^8.1.7",
     "postcss-loader": "^4.0.4",
     "style-loader": "^2.0.0",
+    "vue-loader": "^15.9.5",
+    "vue-template-compiler": "^2.6.12",
     "webpack": "^5.5.1",
     "webpack-cli": "^4.2.0"
   }
